Fix vercel.json configuration conflict - use rewrites instead of routes

--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,13 @@
 {
-  "version": 2,
-  "public": true,
   "functions": {
     "api/waitlist.js": {
       "runtime": "nodejs18.x"
     }
   },
-  "routes": [
+  "rewrites": [
     {
-      "src": "/api/(.*)",
-      "dest": "/api/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ],
   "headers": [
