--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "echo 'No build needed'",
+  "buildCommand": "echo 'No build needed - v2'",
   "outputDirectory": ".",
   "rewrites": [
     {
